# final_coding_project

./: README.md  environment.yml  main.py  output.py  pyproject.toml  requirements.txt  test_main.py
tests/: test_main.py  test_output.py
variant_tool/: clinvar.py  main.py  output.py  variant_validator.py
