[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "final_coding_project"
version = "0.1.0"
description = "Command-line tool for HGVS variant validation and ClinVar classification."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests==2.32.3",
    "pytest==8.3.5",
    "pluggy==1.5.0",
    "iniconfig==2.0.0",
    "urllib3==2.3.0",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "idna==3.10",
    "packaging==24.2"
]

[project.scripts]
variant-tool = "variant_tool.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["variant_tool"]

